plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.part4.team05'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testCompileOnly {
        extendsFrom testAnnotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    implementation 'io.micrometer:micrometer-registry-prometheus' // 프로메테우스 의존성
    implementation 'org.springframework.boot:spring-boot-starter-batch' //스프링 배치 스타터
    implementation 'org.springframework.batch:spring-batch-integration' //스프링 배치 integration
    implementation 'org.springframework.boot:spring-boot-starter-mail' //임시 비밀번호 발송시 이메일 사용을 위한 의존성
    implementation "io.jsonwebtoken:jjwt-api:0.12.5" //강의노트 참고 토큰 관련 의존성
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"

    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final' //매퍼 관련
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    implementation 'org.modelmapper:modelmapper:3.2.4'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0' //스웨거

    //테스트 관련
    testImplementation 'com.h2database:h2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.batch:spring-batch-test'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'     //oauth
    implementation 'software.amazon.awssdk:s3:2.21.29' //S3
}

sourceSets {
    main {
        java {
            srcDir "build/generated/querydsl"
        }
    }
}

tasks.named('test', Test) {
    useJUnitPlatform {
        excludeTags 'integration'
    }
    finalizedBy(tasks.named('jacocoTestReport'))
}


jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
    }

    classDirectories.setFrom(
            fileTree(dir: layout.buildDirectory.dir("classes/java/main").get().asFile) {
                include 'com/part4/team05/**/service/**'
                exclude '**/controller/**', '**/dto/**', '**/entity/**', '**/config/**', '**/exception/**'
            }
    )
}
